--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
-<h1 style="font-family: sans-serif; text-align: center; color: red;">Wonkyun's Challenge for Friday, September 2nd</h1>
-<p>Learn about the basics of web development - specifically dive into HTML & CSS.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,700;1,400&family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!--<link> 태그의 rel 속성은 현재 문서와 외부 리소스 사이의 연관 관계를 명시합니다.-->
+    <link href="site.css" rel="stylesheet" />
+    <title>My Daily Challenge</title>
+  </head>
+  <body>
+    <h1>Wonkyun's Challenge for Friday, September 2nd</h1>
+    <p id="todays-challenge">
+      Learn about the basics of web development - specifically dive into HTML &
+      CSS.
+    </p>
+    <p>
+      I'll achieve goal by diving into
+      <a href="https://www.google.com"> more learning resources </a>
+    </p>
+  </body>
+</html>
