--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>My Daily Challenge</title>
   </head>
   <body>
+     <!--alt는 이미지가 서버로 로딩되지 않을 때 대신 표시되는 텍스트 -->
+     <img src="challenges-trophy.jpeg" alt = "A trophy"> 
     <h1>Wonkyun's Challenge for Friday, September 2nd</h1>
     <p id="todays-challenge">
       Learn about the basics of web development - specifically dive into HTML &
