--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -9,20 +10,21 @@
     />
 
     <!--<link> 태그의 rel 속성은 현재 문서와 외부 리소스 사이의 연관 관계를 명시합니다.-->
-    <link href="site.css" rel="stylesheet" />
+    <link href="styles/shared.css" rel="stylesheet" />
+    <link href="styles/daily-challenge.css" rel="stylesheet" />
     <title>My Daily Challenge</title>
   </head>
   <body>
-     <!--alt는 이미지가 서버로 로딩되지 않을 때 대신 표시되는 텍스트 -->
-     <img src="challenges-trophy.jpeg" alt = "A trophy"> 
+    <!--alt는 이미지가 서버로 로딩되지 않을 때 대신 표시되는 텍스트 -->
+    <img src="images/challenges-trophy.jpeg" alt="A trophy" />
     <h1>Wonkyun's Challenge for Friday, September 2nd</h1>
     <p id="todays-challenge">
       Learn about the basics of web development - specifically dive into HTML &
       CSS.
     </p>
     <p>
-      I'll achieve goal by diving into
-      <a href="https://www.google.com"> more learning resources </a>
+      Explore the
+      <a href="full-week.html"> full week </a>
     </p>
   </body>
 </html>
