--- a/full-week.html
+++ b/full-week.html
@@ -13,14 +13,31 @@
     <title>My Upcoming Challenge</title>
   </head>
   <body>
-    <h1>My Upcoming Challenge</h1>
-    <a href="index.html">View Today's Challenge</a>
-    
-    <ol>
-        <li>Repeat What I learned about HTML & CSS</li>
-        <li>Do the exercise on HTML & CSS</li>
-        <li>Dive deeper into HTML & CSS and build more complex websites</li>
-    </ol>
+    <header>
+      <h1>My Upcoming Challenge</h1>
+      <p id="description">These are my goals for the next days</p>
+      <a href="index.html">View Today's Challenge</a>
+    </header>
+    <main>
+      <ol>
+        <li>
+          <h2>TuesDay,April 2nd</h2>
+          <p>Repeat What I learned about HTML & CSS</p>
+        </li>
+        <li class="highlight-goal">
+          <h2>Wensday,April 3rd</h2>
+          <p>Do the exercise on HTML & CSS</p>
+        </li>
 
+        <li class="highlight-goal">
+          <h2>Thursday,April 4th</h2>
+          <p>Dive deeper into HTML & CSS and build more complex websites</p>
+        </li>
+        <li>
+          <h2>Friday,April 5th</h2>
+          <p>Practice advanced HTML & CSS concepts</p>
+        </li>
+      </ol>
+    </main>
   </body>
 </html>
